CRM - 合約書 更新小地方

--- a/CRM/media-ad-contract_print.html
+++ b/CRM/media-ad-contract_print.html
@@ -57,7 +57,7 @@
                 公司電話：XXXXXX<br>
                 統一編號：XXXXXXXX<br>
                 聯絡人：XXX<br>
-                聯絡電話：(02)1111-1111<br>
+                聯絡人電話：(02)1111-1111<br>
                 聯絡 Email：XXXXX@XXX.com.tw
               </font>
             </td>
@@ -72,7 +72,7 @@
                 公司電話：(02)2502-1980<br>
                 統一編號：90656422<br>
                 聯絡人：XXX<br>
-                聯絡電話：(02)1111-1111<br>
+                聯絡人電話：(02)1111-1111 #107<br>
                 聯絡 Email：XXXXX@XXX.com.tw
               </font>
             </td>
@@ -192,17 +192,17 @@
                       </font>
                     </th>
                   </tr>
-                  <tr>
-                    <td style="min-height: 13.8px; display: grid; align-items: center; padding:3px 0 3px 10px;">
+                  <tr style="vertical-align: text-top;">
+                    <td style="min-height: 13.8px; display: block; align-items: center; padding:3px 0 3px 10px;">
                       <font
-                        style="font-size:12px; color: #333; display: block;font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                        style="font-size:12px; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                         Google
                       </font>
                     </td>
                     <td style="padding:3px;">
                       <font
                         style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                        關鍵字廣告
+                        關鍵字廣告 - 問：如果這邊文字很多會是怎樣的呈現的?? 答案：就是這行掉下來，就是這行掉下來，就是這行掉下來。
                       </font>
                     </td>
                     <td align="right" style="padding:3px;">
@@ -230,7 +230,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="vertical-align: top; min-height: 13.8px; display: grid; align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -268,7 +268,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="vertical-align: top;  min-height: 13.8px; display: grid; align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px;color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -306,7 +306,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="padding:3px 0 3px 10px; min-height: 13.8px; display: grid; align-items: center;">
                       <font
                         style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -344,7 +344,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="  min-height: 13.8px; display: grid; align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -382,7 +382,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="padding:3px 0 3px 10px; min-height: 13.8px; display: grid; align-items: center;">
                       <font
                         style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -420,7 +420,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="min-height: 18.8px; display: grid;align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px; color: #999;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -458,7 +458,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="min-height: 18.8px; display: grid;align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px; color: #333; min-height: 18.8px;  display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -494,7 +494,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="min-height: 18.8px; display: grid;align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px; color: #999; min-height: 18.8px;  display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -531,7 +531,7 @@
                       </font>
                     </td>
                   </tr>
-                  <tr>
+                  <tr style="vertical-align: text-top;">
                     <td style="min-height: 18.8px; display: grid;align-items: center; padding:3px 0 3px 10px;">
                       <font
                         style="font-size:12px; color: #333; min-height: 18.8px;  display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
