WiFiOTG - 新增掃描 QRcode 畫面
1、新增掃描 QRcode 後的取機畫面
2、訂購單、訂購成功頁：新增小計、優惠代碼
3、租借紀錄查詢：修改顏色狀態，並新增藍色"待付款"

--- a/iiot/WiFiOTG/history.html
+++ b/iiot/WiFiOTG/history.html
@@ -91,6 +91,9 @@
 							<div class="sub_list">
 								<ul>
 									<li>
+										<p><a href="history.html">租借紀錄查詢</a></p>
+									</li>
+									<li>
 										<p><a>帳號登出</a></p>
 									</li>
 								</ul>
@@ -108,7 +111,8 @@
 							<div class="card">
 								<div class="top_cont arr_up">
 									<!-- 租借中 state_online -->
-									<!-- 待取機 state_notyea -->
+									<!-- 待取機 state_not_yet -->
+									<!-- 待付款 state_pending -->
 									<!-- 已完成 state_done -->
 									<p class="state state_online">租借中</p>
 									<div class="order_nb_info">
@@ -166,7 +170,8 @@
 							<div class="card order_info">
 								<div class="top_cont">
 									<!-- 租借中 state_online -->
-									<!-- 待取機 state_notyea -->
+									<!-- 待取機 state_not_yet -->
+									<!-- 待付款 state_pending -->
 									<!-- 已完成 state_done -->
 									<p class="state state_online">租借中</p>
 									<div class="order_nb_info">
@@ -225,8 +230,64 @@
 								<div class="top_cont">
 									<!-- 租借中 state_online -->
 									<!-- 待取機 state_not_yet -->
+									<!-- 待付款 state_pending -->
 									<!-- 已完成 state_done -->
 									<p class="state state_not_yet">待取機</p>
+									<div class="order_nb_info">
+										<p class="order_date">訂單日期：2023-07-05</p>
+										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
+									</div>
+									<div class="arr"></div>
+								</div>
+								<div class="order_info" style="display: none;">
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">方案</p>
+												<p class="text">流量儲值型NT$140/GB</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-06-20 ~ 2023-07-05</p>
+											</li>
+											<li>
+												<p class="s_title">設備數</p>
+												<p class="text">1</p>
+											</li>
+											<li>
+												<p class="s_title">價格</p>
+												<p class="text">4,000</p>
+											</li>
+										</ul>
+									</div>
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">訂購人名稱</p>
+												<p class="text">Wendy Shiue</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人信箱</p>
+												<p class="text">
+													<a href="#">wendyshiue00123@gmail.com</a>
+												</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人電話</p>
+												<p class="text">0909123456</p>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<!-- 待付款 -->
+							<div class="card">
+								<div class="top_cont">
+									<!-- 租借中 state_online -->
+									<!-- 待取機 state_not_yet -->
+									<!-- 待付款 state_pending -->
+									<!-- 已完成 state_done -->
+									<p class="state state_pending">待付款</p>
 									<div class="order_nb_info">
 										<p class="order_date">訂單日期：2023-07-05</p>
 										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
@@ -279,6 +340,7 @@
 								<div class="top_cont">
 									<!-- 租借中 state_online -->
 									<!-- 待取機 state_not_yet -->
+									<!-- 待付款 state_pending -->
 									<!-- 已完成 state_done -->
 									<p class="state state_done">已完成</p>
 									<div class="order_nb_info">
