--- a/iiot/WiFiOTG/order.html
+++ b/iiot/WiFiOTG/order.html
@@ -224,14 +224,34 @@
 									<input id="" name="" type="text" value="abcd1111@service.com">
 								</div>							
 							</li>
-							<li class="total_amount clearfix">
+							<li class="details ma20 clearfix">
 								<div class="l_box">
 									<label for="">
-										<p class="label_title">訂單金額</p>
+										<p class="label_title">小計</p>
 									</label>
 								</div>
 								<div class="r_box">
-									<p class="pro_text">$1,900</p>
+									<p class="pro_text">NT$1,900</p>
+								</div>
+							</li>
+							<li class="details clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">優惠代碼</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<p class="pro_text">- NT$100</p>
+								</div>
+							</li>
+							<li class="total_amount clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">訂單總金額</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<p class="pro_text">NT$1,900</p>
 								</div>
 							</li>
 						</ul>
