--- a/iiot/WiFiOTG/take_machine_not_yet.html
+++ b/iiot/WiFiOTG/take_machine_not_yet.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 	<head>
 		<meta charset="UTF-8">
-		<title>預訂成功 - WiFiOTG | WiFi on the Go , Wherever You Go </title>
+		<title>待取機 - WiFiOTG | WiFi on the Go , Wherever You Go </title>
 		<meta name='description' content=""/>
 		<meta name='keywords' content=""/>
 		<meta name="MobileOptimized" content="width">
@@ -102,163 +102,37 @@
 			<main class="main_wrap">
 				<section class="shopping_contents">
 					<form class="fillinBox">
-						<h3 class="top_title">預訂成功</h3>
+						<h3 class="top_title">現在位置：XX站</h3>
 						<div class="order_done">
 							<div class="other_item clearfix">
 								<div class="pro_text">
 									<p class="pro">取機序號</p>
 									<p class="order_nb">DD_EQEWR5sWW20a</p>
+									<p class="shopping_order_nb">訂購編號：464QWQW4+8415843kaqw</p>
 								</div>
-								<p class="btn_default"><a href="#">取機教學</a></p>
+								<p class="btn_default"><a href="#">我要兌換</a></p>
 							</div>
 						</div>
-						<h4 class="order_subtitle">訂購說明</h4>
-						<ul>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">訂購日期</p>
-									</label>
+						<div class="order_done">
+							<div class="other_item clearfix">
+								<div class="pro_text">
+									<p class="pro">取機序號</p>
+									<p class="order_nb">DD_EQEWR5sWW20a</p>
+									<p class="shopping_order_nb">訂購編號：464QWQW4+8415843kaqw</p>
 								</div>
-								<div class="r_box">
-									<p class="pro_text">2023-05-17</p>
+								<p class="btn_default"><a href="#">我要兌換</a></p>
+							</div>
+						</div>
+						<div class="order_done">
+							<div class="other_item clearfix">
+								<div class="pro_text">
+									<p class="pro">取機序號</p>
+									<p class="order_nb">DD_EQEWR5sWW20a</p>
+									<p class="shopping_order_nb">訂購編號：464QWQW4+8415843kaqw</p>
 								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">產品</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">產品 Ti產產品 Titl產品 Title品 Titletle</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">方案</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">流量儲值型NT$140/GB</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">方案金額</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">$2,000</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">起迄日期</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">2023-06-20 ~ 2023-06-27</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">租用天數</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">7 天</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">設備數</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">1</p>
-								</div>
-							</li>
-							<li class="verify clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">優惠代碼</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">happyday</p>
-									<p class="text f_red">成功折抵 $100</p>
-								</div>
-							</li>
-						</ul>
-						<h4 class="order_subtitle">訂購者聯絡資訊</h4>
-						<ul>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">姓名</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">Eikiy</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">手機號碼</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">0988172456</p>
-								</div>
-							</li>
-							<li class="clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">電子郵件</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">abcd1111@service.com</p>
-								</div>
-							</li>
-							<li class="details ma20 clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">小計</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">NT$1,900</p>
-								</div>
-							</li>
-							<li class="details clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">優惠代碼</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">- NT$100</p>
-								</div>
-							</li>
-							<li class="total_amount clearfix">
-								<div class="l_box">
-									<label for="">
-										<p class="label_title">訂單總金額</p>
-									</label>
-								</div>
-								<div class="r_box">
-									<p class="pro_text">$1,900</p>
-								</div>
-							</li>
-						</ul>
+								<p class="btn_default"><a href="#">我要兌換</a></p>
+							</div>
+						</div>
 					</form>
 				</section>
 			</main>
