WiFiOTG - 補狀態與新增客服欄位
1、補「租借記錄」＂錯誤＂狀態（標頭淺粉紅底）與＂查看完整訂單＂連結
2、補「取機失敗」的客服顯示

--- a/iiot/WiFiOTG/take_machine_nb_error.html
+++ b/iiot/WiFiOTG/take_machine_nb_error.html
@@ -102,6 +102,15 @@
 							<p class="error_text">兌換碼有誤，請重新輸入！<br>
 							可能是以下原因造成：<br>
 							請仔細核對兌換碼，是否完全輸入正確。</p>
+							<div class="service_info">
+								<p class="text_info">如有問題請聯繫客服</p>
+								<p class="phone">
+									<a href="tel:+886-2-77515335">+886-2-77515335</a>
+								</p>
+								<p class="mail">
+									<a href="mailto:hello@gowiﬁ.com.tw">hello@gowiﬁ.com.tw</a>
+								</p>
+							</div>
 						</form>
 					</div>
 				</section>
