--- a/iiot/WiFiOTG/history.html
+++ b/iiot/WiFiOTG/history.html
@@ -108,13 +108,16 @@
 						<h3 class="top_title">租借紀錄</h3>
 						<div class="order_history">
 							<!-- 租借中（展開） -->
-							<div class="card">
+
+								<!-- 租借中 state_online -->
+								<!-- 待取機 state_not_yet -->
+								<!-- 待付款 state_pending -->
+								<!-- 已完成 state_done -->
+								<!-- 錯誤 state_error -->
+
+							<div class="card state_online">
 								<div class="top_cont arr_up">
-									<!-- 租借中 state_online -->
-									<!-- 待取機 state_not_yet -->
-									<!-- 待付款 state_pending -->
-									<!-- 已完成 state_done -->
-									<p class="state state_online">租借中</p>
+									<p class="state">租借中</p>
 									<div class="order_nb_info">
 										<p class="order_date">訂單日期：2023-06-30</p>
 										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
@@ -158,6 +161,7 @@
 												<p class="s_title">訂購人電話</p>
 												<p class="text">0988000123</p>
 											</li>
+											<li><p class="text"><a class="link" href="done.html">查看完整訂單</a></p></li>
 										</ul>
 									</div>
 								</div>
@@ -166,14 +170,18 @@
 									<p class="btn"><a href="#">充值</a></p>
 								</div>
 							</div>
+
 							<!-- 租借中（收起） -->
-							<div class="card order_info">
+
+								<!-- 租借中 state_online -->
+								<!-- 待取機 state_not_yet -->
+								<!-- 待付款 state_pending -->
+								<!-- 已完成 state_done -->
+								<!-- 錯誤 state_error -->
+
+							<div class="card state_online">
 								<div class="top_cont">
-									<!-- 租借中 state_online -->
-									<!-- 待取機 state_not_yet -->
-									<!-- 待付款 state_pending -->
-									<!-- 已完成 state_done -->
-									<p class="state state_online">租借中</p>
+									<p class="state">租借中</p>
 									<div class="order_nb_info">
 										<p class="order_date">訂單日期：2023-06-30</p>
 										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
@@ -226,13 +234,73 @@
 								</div>
 							</div>
 							<!-- 待取機 -->
-							<div class="card">
+
+								<!-- 租借中 state_online -->
+								<!-- 待取機 state_not_yet -->
+								<!-- 待付款 state_pending -->
+								<!-- 已完成 state_done -->
+								<!-- 錯誤 state_error -->
+
+							<div class="card state_not_yet">
 								<div class="top_cont">
-									<!-- 租借中 state_online -->
-									<!-- 待取機 state_not_yet -->
-									<!-- 待付款 state_pending -->
-									<!-- 已完成 state_done -->
-									<p class="state state_not_yet">待取機</p>
+									<p class="state">待取機</p>
+									<div class="order_nb_info">
+										<p class="order_date">訂單日期：2023-07-05</p>
+										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
+									</div>
+									<div class="arr"></div>
+								</div>
+								<div class="order_info" style="display: none;">
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">方案</p>
+												<p class="text">流量儲值型NT$140/GB</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-06-20 ~ 2023-07-05</p>
+											</li>
+											<li>
+												<p class="s_title">設備數</p>
+												<p class="text">1</p>
+											</li>
+											<li>
+												<p class="s_title">價格</p>
+												<p class="text">4,000</p>
+											</li>
+										</ul>
+									</div>
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">訂購人名稱</p>
+												<p class="text">Wendy Shiue</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人信箱</p>
+												<p class="text">
+													<a href="#">wendyshiue00123@gmail.com</a>
+												</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人電話</p>
+												<p class="text">0909123456</p>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<!-- 錯誤 -->
+								<!-- 租借中 state_online -->
+								<!-- 待取機 state_not_yet -->
+								<!-- 待付款 state_pending -->
+								<!-- 已完成 state_done -->
+								<!-- 錯誤 state_error -->
+
+							<div class="card state_error">
+								<div class="top_cont">
+									<p class="state">錯誤</p>
 									<div class="order_nb_info">
 										<p class="order_date">訂單日期：2023-07-05</p>
 										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
@@ -281,13 +349,15 @@
 								</div>
 							</div>
 							<!-- 待付款 -->
-							<div class="card">
+								<!-- 租借中 state_online -->
+								<!-- 待取機 state_not_yet -->
+								<!-- 待付款 state_pending -->
+								<!-- 已完成 state_done -->
+								<!-- 錯誤 state_error -->
+
+							<div class="card state_pending">
 								<div class="top_cont">
-									<!-- 租借中 state_online -->
-									<!-- 待取機 state_not_yet -->
-									<!-- 待付款 state_pending -->
-									<!-- 已完成 state_done -->
-									<p class="state state_pending">待付款</p>
+									<p class="state">待付款</p>
 									<div class="order_nb_info">
 										<p class="order_date">訂單日期：2023-07-05</p>
 										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
@@ -335,14 +405,17 @@
 									</div>
 								</div>
 							</div>
+
 							<!-- 已完成（收起）- 標題底為灰色 -->
-							<div class="card bg_end">
+								<!-- 租借中 state_online -->
+								<!-- 待取機 state_not_yet -->
+								<!-- 待付款 state_pending -->
+								<!-- 已完成 state_done -->
+								<!-- 錯誤 state_error -->
+
+							<div class="card state_done">
 								<div class="top_cont">
-									<!-- 租借中 state_online -->
-									<!-- 待取機 state_not_yet -->
-									<!-- 待付款 state_pending -->
-									<!-- 已完成 state_done -->
-									<p class="state state_done">已完成</p>
+									<p class="state">已完成</p>
 									<div class="order_nb_info">
 										<p class="order_date">訂單日期：2023-07-05</p>
 										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
