WiFiOTG - 掃描機器 QRcode 的畫面
1、新增：掃描機器 QRcode 的畫面（報修/續訂）
2、新增：聯繫客服報修畫面
3、租借紀錄頁：新增一欄續訂資訊（續訂日期+機器租用時間）

--- a/iiot/WiFiOTG/history.html
+++ b/iiot/WiFiOTG/history.html
@@ -146,6 +146,7 @@
 										</ul>
 									</div>
 									<div class="row">
+										
 										<ul>
 											<li>
 												<p class="s_title">訂購人名稱</p>
@@ -161,7 +162,39 @@
 												<p class="s_title">訂購人電話</p>
 												<p class="text">0988000123</p>
 											</li>
-											<li><p class="text"><a class="link" href="done.html">查看完整訂單</a></p></li>
+											<li>
+												<p class="text"><a class="link" href="done.html">查看完整訂單</a></p>
+											</li>
+										</ul>
+									</div>
+									<div class="row row_100">
+										<ul>
+											<li>
+												<p class="s_title">續訂日期</p>
+												<p class="text">2023-07-14</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-07-23 ~ 2023-07-30</p>
+											</li>
+											<li class="nb">
+												<p class="text"><a class="link" href="done.html">查看訂單</a></p>
+											</li>
+										</ul>
+									</div>
+									<div class="row row_100">
+										<ul>
+											<li>
+												<p class="s_title">續訂日期</p>
+												<p class="text">2023-07-31</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-08-01 ~ 2023-08-07</p>
+											</li>
+											<li class="nb">
+												<p class="text"><a class="link" href="done.html">查看訂單</a></p>
+											</li>
 										</ul>
 									</div>
 								</div>
