WiFiOTG - 新增使用教學&其他畫面調整
1、新增：使用說明
2、更新：掃描 QR code 後的教學
3、首頁：更新下方特色 Banner（圖片改為 html）

--- a/iiot/WiFiOTG/index.html
+++ b/iiot/WiFiOTG/index.html
@@ -200,7 +200,23 @@
 				<section class="wifiotg_info">
 					<div class="cont_middle">
 						<div class="bn-info">
-							<img src="images/bottom-info.png" width="100%" alt="">
+							<div class="wifiotg_advantage">
+								<ul>
+									<li class="icon_01">
+										<p>4G / 5G 上網<br>不限流量</p>
+										<p class="en">Ulimited 4G/5G internet</p>
+									</li>
+									<li class="icon_02">
+										<p>支援超過全球<br>136 國高速上網</p>
+										<p class="en">136+ Countries covered</p>
+									</li>
+									<li class="icon_03">
+										<p>真人客服<br>										安心服務</p>
+										<p class="en">Customer service 24/7</p>
+									</li>
+								</ul>
+							</div>
+							<!-- <img src="images/bottom-info.png" width="100%" alt=""> -->
 						</div>
 					</div>
 				</section>
