--- a/iiot/WiFiOTG/take_machine.html
+++ b/iiot/WiFiOTG/take_machine.html
@@ -93,11 +93,58 @@
 						<h3 class="top_title">XX站</h3>
 						<div class="take_text">
 							<p>WiFiOTG XX站</p>
-							<br>
-							<p>圖+文<br>
-							(使用說明)<br>
-							<br><br>
-							</p>
+							<h4 class="top_title_bgw">
+								<span>四個步驟，輕鬆在全世界體驗高速上網</span>
+							</h4>
+							<ul class="step_01-04">
+								<li>
+									<div class="images">
+										<img src="images/teaching/teaching_step_01.png" alt="Step 01 線上預訂">
+									</div>
+									<p class="step">Step 01</p>
+									<p class="s_title">線上預訂</p>
+									<p class="s_text">
+										於網站上選擇您要的<br>
+										國家地區與方案<br>
+										並完成預訂
+									</p>
+								</li>
+								<li>
+									<div class="images">
+										<img src="images/teaching/teaching_step_02.png" alt="Step 02 領取設備">
+									</div>
+									<p class="step">Step 02</p>
+									<p class="s_title">領取設備</p>
+									<p class="s_text">
+										尋找周邊租用站點<br>
+										掃描站點 QR Code<br>
+										領取設備
+									</p>
+								</li>
+								<li>
+									<div class="images">
+										<img src="images/teaching/teaching_step_03.png" alt="Step 03 輸入密碼即可上網">
+									</div>
+									<p class="step">Step 03</p>
+									<p class="s_title">輸入密碼即可上網</p>
+									<p class="s_text">
+										長按電源鍵開機，待燈號亮起後<br>
+										手機開啟 WiFi 搜尋熱點<br>
+										並輸入密碼即可聯網
+									</p>
+								</li>
+								<li>
+									<div class="images">
+										<img src="images/teaching/teaching_step_04.png" alt="Step 04 歸還設備">
+									</div>
+									<p class="step">Step 04</p>
+									<p class="s_title">歸還設備</p>
+									<p class="s_text">
+										結束使用後，尋找 WiFiOTG 站點<br>
+										將設備插入空卡槽，完成設備歸還
+									</p>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</section>
