--- a/iiot/WiFiOTG/teaching.html
+++ b/iiot/WiFiOTG/teaching.html
@@ -57,7 +57,7 @@
 	<!-- Site Overlay -->
 	<div class="site-overlay"></div>
 	<div id="container">
-		<!-- <header class="header_wrap">
+		<header class="header_wrap">
 			<button class="menu-btn">
 				<span></span>
 			</button>
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 			</section>
-		</header> -->
+		</header>
 		<main class="main_wrap">
 			<section class="teaching_contents">
 				<div class="cont_middle">
