iTribe - add QRcode

--- a/iiot/iTribe/index.html
+++ b/iiot/iTribe/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>iTribe 連熱點天天送金幣 | 愛部落天天送金幣</title>
-    <meta name='description'content="" />
+    <title>iTribe 連熱點天天送金幣 | 愛部落天天送金幣 | 臺東縣政府好康活動</title>
+    <meta name='description'content="本活動結合 i-Tribe 與 TTPush，8/1 - 9/30 活動期間自臺東縣政府建置之 i-Tribe 愛部落熱點上網。族人或民眾註冊 TTPush 輸入手機號碼即可領取金幣，每次領取 20 枚，每天限領 1 次" />
     <meta name='keywords' content="iTribe, 愛部落, 天天送金幣 , 連熱點, 送金幣, 台東縣政府, 點點全球, DOTDOT GLOBAL, market" />
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="iTribe 連熱點天天送金幣 | 愛部落天天送金幣 | 臺東縣政府好康活動" />
     <meta property="og:url" content="#" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="本活動結合 i-Tribe 與 TTPush，8/1 - 9/30 活活動期間自臺東縣政府建置之 i-Tribe 愛部落熱點上網。族人或民眾註冊 TTPush 輸入手機號碼即可領取金幣，每次領取 20 枚，每天限領 1 次" />
     <meta property="og:type" content="website" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
 
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 
-    <script src="js/wow.js"></script>
     <!-- animate -->
+    <script src="js/wow.js"></script>
     <script>
         $(function () {
             new WOW().init();
@@ -44,18 +49,29 @@
                 </div>
                 <div class="fillinBox">
                     <div class="img-phone">
-                        <img src="images/bg_img04.png">
+                        <img src="images/bg_img04.png" alt="手拿手機 iTribe 連熱點">
                     </div>
                     <div class="rBox">
                         <div class="inputBox">
                             <input type="tel" placeholder="請輸入電話">
                             <button>送出</button>
                             <!-- 錯誤才顯示下面 text -->
+                            <!-- 錯誤才顯示下面 text -->
+                            <!-- 錯誤才顯示下面 text -->
                             <span class="text">電話號碼長度不正確！</span>
                         </div>
-                        <div class="QRcode">
-                            <img src="images/QRcode.png">
+                        <div class="app_info">
+                            <div class="top_text">
+                                <img src="images/QRcode_text.png" alt="台東縣政府建置之 i-Tribe 愛部落上網熱點">
+                            </div>
+                            <a class="QRcode" href="https://play.google.com/store/apps/details?id=com.cloudfun.taitung.itribe" target="_blank" title="前往下載">
+                                <img src="images/QRcode_google.png">
+                            </a>
+                            <a class="QRcode" href="https://apps.apple.com/tw/app/%E8%87%BA%E6%9D%B1-i-%E9%83%A8%E8%90%BD/id1489701173" target="_blank" title="前往下載">
+                                <img src="images/QRcode_google.png">
+                            </a>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -70,6 +86,8 @@
                         <li>本活動結合 i-Tribe 與 TTPush，活動期間自臺東縣政府建置之 i-Tribe 愛部落熱點上網，點選連結至「天天送金幣」活動專用網頁。族人或民眾（須<a href="#">註冊 TTPush</a>）輸入手機號碼即可領取金幣，每次領取 20 枚，<span class="c_red">每天限領 1 次</span>。</li>
                         <li>本活動金幣發放上限為 120 萬枚臺東金幣。</li>
                         <li>其他未盡事宜以本府活動訊息頁面為準。</li>
+                        <!-- tel這寫法待確認? 089 -->
+                        <li>若有 i-Tribe 熱點相關問題，請撥打客服專線：<a href="tel:+886-089-330064">089-330064</a> 吳先生、<a href="tel:+886-089-331480">089-331480</a> 楊先生。</li>
                     </ul>
                 </div>
             </div>
