iTribe - css mob 微調

--- a/iiot/iTribe/index.html
+++ b/iiot/iTribe/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>iTribe 連熱點天天送金幣 | 愛部落天天送金幣 | 臺東縣政府好康活動</title>
     <meta name='description'content="本活動結合 i-Tribe 與 TTPush，8/1 - 9/30 活動期間自臺東縣政府建置之 i-Tribe 愛部落熱點上網。族人或民眾註冊 TTPush 輸入手機號碼即可領取金幣，每次領取 20 枚，每天限領 1 次" />
-    <meta name='keywords' content="iTribe, 愛部落, 天天送金幣 , 連熱點, 送金幣, 台東縣政府, 點點全球, DOTDOT GLOBAL, market" />
+    <meta name='keywords' content="iTribe, 愛部落, 天天送金幣 , 熱點, 送金幣, 台東縣政府, TTPush, 點點全球, DOTDOT GLOBAL" />
     <meta property="og:title" content="iTribe 連熱點天天送金幣 | 愛部落天天送金幣 | 臺東縣政府好康活動" />
-    <meta property="og:url" content="#" />
     <meta property="og:description" content="本活動結合 i-Tribe 與 TTPush，8/1 - 9/30 活活動期間自臺東縣政府建置之 i-Tribe 愛部落熱點上網。族人或民眾註冊 TTPush 輸入手機號碼即可領取金幣，每次領取 20 枚，每天限領 1 次" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/share_pic.png" />
+    <meta property="og:url" content="#" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
