CRM - 媒體廣告委刊 - 小調整

--- a/CRM/media-ad-contract_print.html
+++ b/CRM/media-ad-contract_print.html
@@ -23,7 +23,7 @@
     <!-- 680px*1000px -->
     <div style="width: 680px; height: 1000px; margin: 0 auto; position: relative;">
       <!-- LOGO fixed 左上角 -->
-      <div style="position: absolute; left: 0; top: -11mm; width: 155px;">
+      <div style="position: absolute; left: 0; top: -11mm; width: 153px;">
         <img src="images/svg/logo.svg" width="100%" style="display: inline-block; opacity: .5;">
       </div>
       <!-- 合約編號 fixed 右上角 -->
@@ -500,13 +500,7 @@
             <li>
               <font
                 style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                付款條件：專案上檔前逐月付款
-              </font>
-            </li>
-            <li>
-              <font
-                style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                付款方式：匯款
+                付款條件 / 付款方式：專案上檔前逐月付款 / 匯款
               </font>
             </li>
             <li>
@@ -562,11 +556,10 @@
             *雙方皆已確認依照此媒體廣告委刊內容執行，且同意所有執行責任及義務應以業務合作合約書之約定為準後給予簽章/用印。</font>
         </div>
       </div>
-      <div style=" position: absolute; left: 0; bottom: 3mm; width: 100%;">
+      <div style=" position: absolute; left: 0; bottom: 0mm; width: 100%;">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td
-              style="min-height: 100px; vertical-align: top; display: grid; padding:3px 10px;">
+            <td style="vertical-align: top; display: grid; padding:0px 10px;">
             </td>
             <td width="4%">　</td>
             <td style="padding:3px 10px; vertical-align: top;"> </td>
@@ -588,7 +581,7 @@
           </tr>
         </table>
       </div>
-      <font style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 0mm; bottom: -3mm;">
+      <font style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 0mm; bottom: -5mm;">
         簽約日期：中華民國 _______ 年 ______ 月 ______ 日
       </font>
     </div>
