--- a/iiot/iTribe/index.html
+++ b/iiot/iTribe/index.html
@@ -69,7 +69,7 @@
                                 <img src="images/QRcode_google.png">
                             </a>
                             <a class="QRcode" href="https://apps.apple.com/tw/app/%E8%87%BA%E6%9D%B1-i-%E9%83%A8%E8%90%BD/id1489701173" target="_blank" title="前往下載">
-                                <img src="images/QRcode_google.png">
+                                <img src="images/QRcode_ios.png">
                             </a>
                         </div>
                         
